RESOLVED FIXED23066
Full Page Zoom: a <video> element that doesn't include width/height attribute does not scale
https://bugs.webkit.org/show_bug.cgi?id=23066
Summary Full Page Zoom: a <video> element that doesn't include width/height attribute...
Eric Carlson
Reported 2009-01-01 12:02:55 PST
A <video> element without width and height, like the following, doesn't scale as the page is zoomed with cmd +/-. It will scale properly if width and height attributes are added. <html> <head><title>video without width and height</title></head> <body> <p>Video element with no width and height specified</p> <video src="http://pulsar.esm.psu.edu/Faculty/Gray/graphics/movies/colors00.mov" autoplay></video> </body> </html>
Attachments
proposed fix (1.89 KB, patch)
2009-01-01 12:11 PST, Eric Carlson
darin: review+
revised patch (5.44 KB, patch)
2009-01-02 12:32 PST, Eric Carlson
darin: review+
Eric Carlson
Comment 1 2009-01-01 12:11:04 PST
Created attachment 26349 [details] proposed fix
Darin Adler
Comment 2 2009-01-01 12:50:54 PST
Comment on attachment 26349 [details] proposed fix Fix looks great, but we require a regression test for each fix. I don't know if we have regression test machinery yet for testing zoom. I'm going to say r=me, but please investigate adding a regression test.
Eric Carlson
Comment 3 2009-01-02 12:32:29 PST
Created attachment 26378 [details] revised patch It looks like WebKit uses the same code path for css zoom and Safari cmd +/-, so the revised patch includes a layout test that sets 'zoom: 150%' on two video elements. The page renders incorrectly with TOT but does the right thing with the proposed changes to RenderVideo.cpp.
Darin Adler
Comment 4 2009-01-02 13:04:35 PST
Comment on attachment 26378 [details] revised patch r=me
Eric Carlson
Comment 5 2009-01-02 16:21:37 PST
Committed revision 39562.
Note You need to log in before you can comment on or make changes to this bug.