2009-01-02  Eric Carlson  <eric.carlson@apple.com>

Reviewed by Darin Adler

        Fix for https://bugs.webkit.org/show_bug.cgi?id=23066 & <rdar://problem/6028417>
        Full Page Zoom: a <video> element that doesn't include width/height attribute does not scale

        * rendering/RenderVideo.cpp:
        (WebCore::RenderVideo::calcReplacedWidth): Multiply aspect ratio width by style()->effectiveZoom()
        (WebCore::RenderVideo::calcReplacedHeight): Multiply aspect ratio height by style()->effectiveZoom()

2009-01-02  Eric Carlson  <eric.carlson@apple.com>

        Reviewed by Darin Adler

        https://bugs.webkit.org/show_bug.cgi?id=23066 & <rdar://problem/6028417>
        Full Page Zoom: a <video> element that doesn't include width/height attribute does not scale

        Add test for <video> zoom with and without width/height attributes

        * media/video-zoom.html: Added.
        * platform/mac/media/video-zoom-expected.txt: Added.


Canonical link: https://commits.webkit.org/31761@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39562 268f45cc-cd09-0410-ab3c-d52691b4dbfc